--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -42,3 +42,18 @@
         transform: translateY(0);
     }
 }
+
+@keyframes favoris {
+    0% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 0.4;
+    }
+    70% {
+        opacity: 0.7;
+    }
+    100% {
+        opacity: 1;
+    }
+}
