--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -100,6 +100,7 @@
         }
         &:hover {
             cursor: pointer;
+            animation: favoris 0.5s ease;
             .favoris__active {
                 display: block;
             }
