--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -68,6 +68,7 @@
     width: 40px;
     margin-left: 20px;
     border: 2px solid #99E2D0;
+    background-color: #99E2D0;
 }
 
 @mixin btn-check {
@@ -90,10 +91,14 @@
 
 @mixin coeur {
     .favoris {
+        position: relative;
+        align-items: center;
         svg {
             height: 1em;
             width: 1em;
             font-size: 30px;
+            position: absolute;
+            right: 10px;
         }
         .favoris__active {
             display: none;
