--- a/sass/style.scss
+++ b/sass/style.scss
@@ -224,7 +224,7 @@ header {
                 color: #000;
                 padding: 15px 15px 0 10px;
                 text-align: left;
-                @include coeur;
+                @include essai;
             }
             .restaurants__nouveau {
                 position: absolute;
