--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -115,3 +115,34 @@
         }
     }
 }
+
+@mixin essai {
+    .favoris {
+        display: flex;
+        padding-bottom: 1.5rem;
+        align-self: center;
+        font-size: 1.5rem;
+        justify-content: flex-end;
+        svg {
+            height: 1em;
+            width: 1em;
+            font-size: 30px;
+            position: absolute;
+            right: 10px;
+        }
+        .favoris__active {
+            position: absolute;
+            opacity: 0;
+        }
+        &:hover {
+            cursor: pointer;
+            animation: favoris 0.5s ease;
+            .favoris__active {
+                opacity: 1;
+            }
+            .favoris__inactive {
+                opacity: 0;
+            }
+        }
+    }
+}
