--- a/style.css
+++ b/style.css
@@ -375,8 +375,11 @@ header {
   text-align: left;
 }
 .restaurants .restaurants__bloc .restaurants__cartes .restaurants__cartes__texte .favoris {
-  position: relative;
-  align-items: center;
+  display: flex;
+  padding-bottom: 1.5rem;
+  align-self: center;
+  font-size: 1.5rem;
+  justify-content: flex-end;
 }
 .restaurants .restaurants__bloc .restaurants__cartes .restaurants__cartes__texte .favoris svg {
   height: 1em;
@@ -386,17 +389,18 @@ header {
   right: 10px;
 }
 .restaurants .restaurants__bloc .restaurants__cartes .restaurants__cartes__texte .favoris .favoris__active {
-  display: none;
+  position: absolute;
+  opacity: 0;
 }
 .restaurants .restaurants__bloc .restaurants__cartes .restaurants__cartes__texte .favoris:hover {
   cursor: pointer;
   animation: favoris 0.5s ease;
 }
 .restaurants .restaurants__bloc .restaurants__cartes .restaurants__cartes__texte .favoris:hover .favoris__active {
-  display: block;
+  opacity: 1;
 }
 .restaurants .restaurants__bloc .restaurants__cartes .restaurants__cartes__texte .favoris:hover .favoris__inactive {
-  display: none;
+  opacity: 0;
 }
 .restaurants .restaurants__bloc .restaurants__cartes .restaurants__nouveau {
   position: absolute;
