--- a/sass/style.scss
+++ b/sass/style.scss
@@ -224,7 +224,7 @@ header {
                 color: #000;
                 padding: 15px 15px 0 10px;
                 text-align: left;
-                @include essai;
+                @include coeur;
             }
             .restaurants__nouveau {
                 position: absolute;
@@ -283,23 +283,7 @@ header {
     }
 }
 
-.background1 {
-    background-image: url(../Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
-    @include background;
-}
-
-.background2 {
-    background-image: url(../Maquettes/images/restocomp/stil-u2Lp8tXIcjw-unsplash.jpg);
-    @include background;
-}
-
-.background3 {
-    background-image: url(../Maquettes/images/restocomp/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
-    @include background;
-}
-
-.background4 {
-    background-image: url(../Maquettes/images/restocomp/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
+.background {
     @include background;
 }
 
@@ -307,6 +291,7 @@ header {
     background-color: rgb(245, 245, 245);
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    width: 100%;
     .menu__name {
         display: flex;
         justify-content: space-around;
