--- a/style.css
+++ b/style.css
@@ -454,38 +454,22 @@ header {
   text-align: center;
 }
 
-.background1 {
-  background-image: url(../Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+.background {
   background-position: center, center;
   background-size: cover;
   height: 20em;
 }
-
-.background2 {
-  background-image: url(../Maquettes/images/restocomp/stil-u2Lp8tXIcjw-unsplash.jpg);
-  background-position: center, center;
-  background-size: cover;
-  height: 20em;
-}
-
-.background3 {
-  background-image: url(../Maquettes/images/restocomp/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
-  background-position: center, center;
-  background-size: cover;
-  height: 20em;
-}
-
-.background4 {
-  background-image: url(../Maquettes/images/restocomp/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
-  background-position: center, center;
-  background-size: cover;
-  height: 20em;
+.background img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .menu {
   background-color: whitesmoke;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
+  width: 100%;
 }
 .menu .menu__name {
   display: flex;
@@ -499,8 +483,11 @@ header {
   background-color: whitesmoke;
 }
 .menu .menu__name .favoris {
-  position: relative;
-  align-items: center;
+  display: flex;
+  padding-bottom: 1.5rem;
+  align-self: center;
+  font-size: 1.5rem;
+  justify-content: flex-end;
 }
 .menu .menu__name .favoris svg {
   height: 1em;
@@ -510,17 +497,18 @@ header {
   right: 10px;
 }
 .menu .menu__name .favoris .favoris__active {
-  display: none;
+  position: absolute;
+  opacity: 0;
 }
 .menu .menu__name .favoris:hover {
   cursor: pointer;
   animation: favoris 0.5s ease;
 }
 .menu .menu__name .favoris:hover .favoris__active {
-  display: block;
+  opacity: 1;
 }
 .menu .menu__name .favoris:hover .favoris__inactive {
-  display: none;
+  opacity: 0;
 }
 .menu h1 {
   padding: 20px;
@@ -559,7 +547,8 @@ header {
   background-color: #fff;
   box-shadow: 0px 7px 10px -6px #b9b8b8;
   padding: 15px;
-  margin: 10px;
+  margin: 3%;
+  width: 94%;
   align-items: center;
   position: relative;
   overflow: hidden;
