--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -26,6 +26,32 @@
     }
 }
 
+@-webkit-keyframes lumineux {
+    0% {
+        color: $primary-color;
+        text-shadow: 0 0 7px $primary-color;
+        visibility: visible;
+        opacity: 1;
+    }
+    30% {
+        opacity: 0.9;
+    }
+    70% {
+        opacity: 0.7;
+    }
+    90% {
+        color: $secondary-color;
+        text-shadow: none;
+        opacity: 0.5;
+    }
+    100% {
+        color: $primary-color;
+        text-shadow: 0 0 7px $primary-color;
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
 @keyframes apmenu {
     0% {
         opacity: 0;
@@ -43,7 +69,39 @@
     }
 }
 
+@-webkit-keyframes apmenu {
+    0% {
+        opacity: 0;
+        transform: translateY(20rem);
+    }
+    40% {
+        opacity: 0.4;
+    }
+    70% {
+        opacity: 0.7;
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 @keyframes favoris {
+    0% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 0.4;
+    }
+    70% {
+        opacity: 0.7;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes favoris {
     0% {
         opacity: 0;
     }
