--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -116,6 +116,7 @@
         &:hover {
             cursor: pointer;
             animation: favoris 0.5s ease;
+            -webkit-animation: favoris 0.5s ease;
             .favoris__active {
                 opacity: 1;
             }
