--- a/style.css
+++ b/style.css
@@ -612,15 +612,19 @@ header {
 }
 .menu__bloc .menu__choix .btn__menu:nth-of-type(1) {
   animation: apmenu 0.5s ease;
+  -webkit-animation: apmenu 0.5s ease;
 }
 .menu__bloc .menu__choix .btn__menu:nth-of-type(2) {
   animation: apmenu 1s ease;
+  -webkit-animation: apmenu 0.5s ease;
 }
 .menu__bloc .menu__choix .btn__menu:nth-of-type(3) {
   animation: apmenu 1.5s ease;
+  -webkit-animation: apmenu 0.5s ease;
 }
 .menu__bloc .menu__choix .btn__menu:nth-of-type(4) {
   animation: apmenu 2s ease;
+  -webkit-animation: apmenu 0.5s ease;
 }
 .menu__bloc .menu__choix .btn__menu p {
   text-align: left;
