--- a/style.css
+++ b/style.css
@@ -443,6 +443,11 @@ header {
   position: absolute;
   right: 10px;
 }
+@media (min-width: 768px) {
+  .restaurants .restaurants__bloc .restaurants__cartes .restaurants__cartes__texte .favoris svg {
+    right: 50px;
+  }
+}
 .restaurants .restaurants__bloc .restaurants__cartes .restaurants__cartes__texte .favoris .favoris__active {
   position: absolute;
   opacity: 0;
@@ -515,9 +520,16 @@ header {
   background-size: cover;
   height: 20em;
 }
+@media only screen and (min-width: 1110px) {
+  .background {
+    height: 40em;
+  }
+}
 .background img {
   height: 100%;
   width: 100%;
+  background-position: center, center;
+  background-size: cover;
   object-fit: cover;
 }
 
@@ -552,6 +564,11 @@ header {
   position: absolute;
   right: 10px;
 }
+@media (min-width: 768px) {
+  .menu .menu__name .favoris svg {
+    right: 50px;
+  }
+}
 .menu .menu__name .favoris .favoris__active {
   position: absolute;
   opacity: 0;
@@ -566,6 +583,11 @@ header {
 }
 .menu .menu__name .favoris:hover .favoris__inactive {
   opacity: 0;
+}
+@media (min-width: 768px) {
+  .menu .menu__name {
+    justify-content: center;
+  }
 }
 .menu h1 {
   padding: 20px;
