--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -45,9 +45,14 @@
     background-position: center, center;
     background-size: cover;
     height: 20em;
+    @media only screen and (min-width: 1110px) {
+        height: 40em;
+    }
     img {
         height: 100%;
         width: 100%;
+        background-position: center, center;
+        background-size: cover;
         object-fit: cover;
     }
 }
@@ -108,6 +113,9 @@
             font-size: 30px;
             position: absolute;
             right: 10px;
+            @media (min-width: 768px) {
+                right: 50px;
+            }
         }
         .favoris__active {
             position: absolute;
