--- a/sass/style.scss
+++ b/sass/style.scss
@@ -337,19 +337,15 @@ header {
             overflow: hidden;
             &:nth-of-type(1) {
                 animation: apmenu 0.5s ease;
-                -webkit-animation: apmenu 0.5s ease;
             }
             &:nth-of-type(2) {
                 animation: apmenu 1s ease;
-                -webkit-animation: apmenu 0.5s ease;
             }
             &:nth-of-type(3) {
                 animation: apmenu 1.5s ease;
-                -webkit-animation: apmenu 0.5s ease;
             }
             &:nth-of-type(4) {
                 animation: apmenu 2s ease;
-                -webkit-animation: apmenu 0.5s ease;
             }
             p {
                 text-align: left;
@@ -381,7 +377,9 @@ header {
                 justify-content: center;
                 @include btn-check;
                 transform: translateX(100%);
+                -webkit-transform: translateX(100%);
                 transition: transform .3s ease;
+                -webkit-transition: transform .3s ease;
                 i {
                     color: #fff;
                     align-items: center;
@@ -395,7 +393,9 @@ header {
                     transform: translateX(0);
                     i {
                         transform: rotate(360deg);
+                        -webkit-transform: rotate(360deg);
                         transition: transform 0.5s ease;
+                        -webkit-transition: transform 0.5s ease;
                     }
                 }
                 .menu__titre {
