--- a/sass/style.scss
+++ b/sass/style.scss
@@ -192,7 +192,7 @@ header {
         font-weight: 500;
         font-size: 20px;
         text-align: left;
-        padding: 30px 0 30px 15px;
+        padding: 20px 0 15px 15px;
         @include titre;
     }
     .restaurants__bloc {
@@ -203,7 +203,7 @@ header {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-gap: 30px;
-            padding: 40px;
+            padding: 10px 40px 40px;
             background-color: transparent;
         }
         .restaurants__cartes {
@@ -254,6 +254,9 @@ header {
         a {
             text-decoration: none;
             color: #fff;
+        }
+        li {
+            padding-bottom: 10px;
         }
         i {
             padding-right: 25px;
