--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -7,6 +7,9 @@
     font-family: $fonts1;
     font-size: 1rem;
     box-shadow: 0px 7px 10px -6px #b9b8b8;
+    @media (min-width: 768px) {
+        padding: 10px 20px;
+    }
 }
 
 @mixin survol {
@@ -33,8 +36,9 @@
 /*responsive */
 
 @mixin titre {
-    @media only screen and (min-width: 815px) {
+    @media only screen and (min-width: 768px) {
         text-align: center;
+        padding-bottom: 0;
     }
 }
 
