--- a/style.css
+++ b/style.css
@@ -320,6 +320,11 @@ header {
   font-size: 1rem;
   box-shadow: 0px 7px 10px -6px #b9b8b8;
 }
+@media (min-width: 768px) {
+  .btn__action {
+    padding: 10px 20px;
+  }
+}
 .btn__action:hover {
   cursor: pointer;
   opacity: 0.7;
@@ -339,9 +344,10 @@ header {
   text-align: left;
   padding-left: 15px;
 }
-@media only screen and (min-width: 815px) {
+@media only screen and (min-width: 768px) {
   .fonctionnement .fonctionnement__titre {
     text-align: center;
+    padding-bottom: 0;
   }
 }
 .fonctionnement .fonctionnement__explication {
@@ -415,11 +421,12 @@ header {
   font-weight: 500;
   font-size: 20px;
   text-align: left;
-  padding: 30px 0 30px 15px;
+  padding: 20px 0 15px 15px;
 }
-@media only screen and (min-width: 815px) {
+@media only screen and (min-width: 768px) {
   .restaurants .restaurants__titre {
     text-align: center;
+    padding-bottom: 0;
   }
 }
 .restaurants .restaurants__bloc {
@@ -432,7 +439,7 @@ header {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 30px;
-    padding: 40px;
+    padding: 10px 40px 40px;
     background-color: transparent;
   }
 }
@@ -522,6 +529,9 @@ header {
 .footer .footer__liste a {
   text-decoration: none;
   color: #fff;
+}
+.footer .footer__liste li {
+  padding-bottom: 10px;
 }
 .footer .footer__liste i {
   padding-right: 25px;
