--- a/style.css
+++ b/style.css
@@ -229,8 +229,9 @@ body {
 
 .wrapper {
   min-width: 375px;
-  max-width: 1500px;
+  max-width: 1440px;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 /*loader*/
