--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,8 +13,9 @@ body {
 
 .wrapper {
     min-width: 375px;
-    max-width: 1500px;
+    max-width: 1440px;
     margin: 0 auto;
+    overflow-x: hidden;
 }
 
 
