--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -22,6 +22,7 @@
     border: 1px solid #f2f2f2;
     height: 250px;
     box-shadow: 0px 7px 10px -6px #b9b8b8;
+    max-width: 650px;
 }
 
 @mixin nouveau {
