--- a/style.css
+++ b/style.css
@@ -449,6 +449,7 @@ header {
   border: 1px solid #f2f2f2;
   height: 250px;
   box-shadow: 0px 7px 10px -6px #b9b8b8;
+  max-width: 650px;
   margin: 20px 15px;
   text-decoration: none;
   color: #1da551;
